tests/specs/run/config_imports/extension_ignored/main.out
error: Expected a JavaScript or TypeScript module, but identified a Unknown module. Importing these types of modules is currently not supported.
  Specifier: file:///[WILDLINE]/config.yaml
    at file:///[WILDLINE]/main.ts:4:18
